# proofcode

./: .gitignore  README.md  SETUP_STEP_1.md  STEP_2_GUIDE.md  STEP_3_GUIDE.md  STEP_4_GUIDE.md  STEP_5_GUIDE.md
contracts/: proofcode-protocol.schema.json
core/: README.md  pyproject.toml
core/src/proofcode_core/: __init__.py  __main__.py  analyzer.py  benchmark.py  candidate.py  cli.py  contract.py  decision.py  fingerprint.py  sandbox.py  verifier.py  version.py  workspace.py
core/tests/: test_analyzer.py  test_benchmark.py  test_candidate.py  test_cli.py  test_decision.py  test_decision_benchmark.py  test_evidence.py  test_sandbox.py  test_stability.py  test_verifier.py  test_workspace.py
core/tests/fixtures/: sample_complexity.py
docs/: 00_Vision.md  01_Proposal_v0.1.md  02_Roadmap.md  03_Architecture.md  04_API.md  05_PluginSDK.md  06_Contributing.md  07_Changelog.md  SANDBOX_READINESS_CHECKLIST.md
extension/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
extension/scripts/: check-commands.mjs  test-connection.mjs
extension/src/: coreClient.ts  extension.ts
sandbox/python/: Dockerfile
scripts/: check-core.ps1
