[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proofcode-core"
version = "0.1.0"
description = "ProofCode validation core"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
proofcode-core = "proofcode_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/proofcode_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
